--- a/FilmesApi/appsettings.json
+++ b/FilmesApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "FilmeConnectionString": "server=localhost;database=filme;user=root;password=root"
+  }
 }
